kubernetes/apps/network/envoy-gateway/config/crowdsec-securitypolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_securitypolicies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: crowdsec
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
  extAuth:
    bodyToExtAuth:
      maxRequestBytes: 65536
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: envoy-proxy-bouncer
          port: 8080
